stable-sort/tests/06-not-brace-struct.rs
use stable_sort::stable_sorted;

#[stable_sorted]
pub struct AAA(u32, u32);

fn main() {}
